supervisord.conf added

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,19 +3,11 @@ nodaemon=true
 
 [program:startup]
 priority=1
-command=/root/startup.sh
+command=/App/start.sh
 autorestart=false
 
-[program:rtorrent]
-user=rtorrent
-directory=/home/rtorrent
+[program:startRF]
 priority=2
-command=rtorrent
-redirect_stderr=true
-environment=HOME="/home/rtorrent",PWD="/home/rtorrent",LOGNAME="rtorrent",USER="rtorrent",TERM=xterm
+command=/App/startRF.sh
 startsecs=5
-
-[program:php5-fpm]
-priority=3
-command=php5-fpm --nodaemonize
 
