--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,12 +2,23 @@
 nodaemon=true
 
 [program:startup]
-priority=1
+priority=3
 command=/App/start.sh
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
 autorestart=false
 
 [program:startRF]
-priority=2
+priority=1
 command=/App/startRF.sh
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
 startsecs=5
+
+[program:hareceiver]
+priority=2
+command=/home/rf24libs/hareceiver
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+startsecs=10
 
