--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:startup]
-priority=3
+priority=999
 command=/App/start.sh
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
@@ -15,10 +15,19 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 startsecs=5
 
-[program:hareceiver]
-priority=2
-command=/home/rf24libs/hareceiver
+[program:mosquittoStart]
+priority=3
+numprocs=1
+command=service mosquitto start
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
-startsecs=10
+startsecs=2
+autorestart=true
+
+[program:mosquittoStatus]
+priority=2
+numprocs=1
+command=service mosquitto status
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
 
